Garbage Collection and types of Garbage Collectors